mode changes to installation scripts

--- a/templates/home.html
+++ b/templates/home.html
@@ -2,16 +2,16 @@
 
 <body>
     <h2> Hello User, I don't know Frontend Development</h2>
-    <form action="https://fulfil-products.herokuapp.com/upload/">
+    <form action="/upload/">
         <input type="submit" value="Go to Upload Page" />
     </form>
-    <form action="https://fulfil-products.herokuapp.com/products/">
+    <form action="/products/">
         <input type="submit" value="Go to Products Page" />
     </form>
-    <form action="https://fulfil-products.herokuapp.com/clear_db/">
+    <form action="/clear_db/">
         <input type="submit" value="Go to DB Deletion Page" />
     </form>
-    <form action="https://fulfil-products.herokuapp.com/webhooks/">
+    <form action="/webhooks/">
         <input type="submit" value="Go to Webhooks Page" />
     </form>
 </body>
