--- a/templates/products_redirect.html
+++ b/templates/products_redirect.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <body>
 
-    <form action="https://fulfil-products.herokuapp.com/products/">
+    <form action="/products/">
         <input type="submit" value="Wanna See the products you Uploaded? Click ME" />
     </form>
 </body>
