--- a/templates/webhooks.html
+++ b/templates/webhooks.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <body>
 <h2>Add the webhook urls comma seperated in the below field, so we can send triggers once a product is added or updated</h2>
-<form method="POST" action="https://fulfil-products.herokuapp.com/products/">
+<form method="POST" action="/products/">
     <label for="webhooks">URLS</label><br>
     <input type="text" id="webhook" name="webhooks"><br>
     <input type="submit" value="Submit">
